# RPN-Calculator

./: .gitignore  CMakeLists.txt  README.md  config.yml
includes/: ConfigLoader.hpp  Core.hpp  Interpreter.hpp  RPNProcessor.hpp  Tools.hpp
lib/: CMakeLists.txt
lib/googletest-master/install/: CMakeCache.txt
src/: CMakeLists.txt  Core.cpp  Interpreter.cpp  Main.cpp  RPNProcessor.cpp  Tools.cpp
tests/: CMakeLists.txt  CoreTest.cpp  InterpreterTest.cpp  MainTest.cpp  RPNProcessorTest.cpp  ToolsTest.cpp
tests/lib/googletest-master/install/: install_manifest.txt
